# RL-shelf-ready-validation

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  run.py
.github/workflows/: unit-tests.yaml  unit-tests.yml
rl_sr_validation/: errors.py  models.py
shelf_ready_validator/: __init__.py  connect.py  errors.py  models.py  sheet.py  translate.py  utils.py
src/: commands.py  errors.py  translate.py
src/cli/: commands.py
src/validate/: errors.py  models.py  models_v2.py  records.json  translate.py
temp/: AuxamInvoice23090439000087.mrc  AuxamInvoice23091339000590.mrc  AuxamInvoice23091339000601.mrc  AuxamInvoice23091939000841.mrc  AuxamInvoice23091939000845.mrc  AuxamInvoice23091939000845.mrk  EastView-sample.mrc  test-records.mrk  test-single-item.mrk  test.mrc  test.mrk  test_stub.mrc  test_stub.mrk
tests/: conftest.py  test.mrc  test.mrk  test_errors.py  test_invoice.py  test_item.py  test_model_v2.py  test_models.py  test_order.py  test_record.py  test_translate.py  test_validate.py
validate/: __init__.py  commands.py  errors.py  models.py  translate.py
