[tool.poetry]
name = "validate"
version = "0.1.0"
description = "A validator for vendor MARC records"
authors = ["Charlotte Kostelic <charlottekostelic@gmail.com>"]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["validate"]

[tool.poetry.scripts]
validate = "validate:main"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
pymarc = "^5.1.0"
rich = "^13.7.0"
click = "^8.1.7"
pytest-mock = "^3.12.0"
bookops-marc = {git = "https://github.com/BookOps-CAT/bookops-marc"}
unidecode = "^1.3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
black = "^23.12.1"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
relative_files = true
source = ["."]

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]