[tool.poetry]
name = "shelf-ready-validator"
version = "0.1.0"
license = "MIT"
description = "A validator for vendor MARC records"
authors = ["Charlotte Kostelic <charlottekostelic@gmail.com>"]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["shelf_ready_validator"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
pymarc = "^5.1.0"
rich = "^13.7.0"
click = "^8.1.7"
bookops-marc = {git = "https://github.com/BookOps-CAT/bookops-marc"}
unidecode = "^1.3.8"
pandas = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
mypy = "^1.8.0"
black = "^23.12.1"

[tool.poetry.scripts]
validator = "shelf_ready_validator:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
relative_files = true
source = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
    /(
        \.eggs
       | \.git
       | \.hg
       | \.mypy_cache
       | \.tox
       | \.venv
       | _build
       | buck-out
       | build
       | dist
    )/
    | temp.py
)
'''